World of Immortality Core Changes

--- a/src/server/scripts/Northrend/CMakeLists.txt
+++ b/src/server/scripts/Northrend/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(scripts_STAT_SRCS
   ${scripts_STAT_SRCS}
+  Northrend/teleNPC_vote.cpp
+  Northrend/teleNPCfun_vote.cpp
   Northrend/isle_of_conquest.cpp
   Northrend/storm_peaks.cpp
   Northrend/Ulduar/HallsOfLightning/instance_halls_of_lightning.cpp
